--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div id="app">
@@ -36,5 +36,7 @@
         </div>
       </div>
     </div>
+
+    <script src="website/app.js"></script>
   </body>
 </html>
