update index.html file

--- a/website/index.html
+++ b/website/index.html
@@ -37,6 +37,7 @@
       </div>
     </div>
 
-    <script src="website/app.js"></script>
+    <script src="config.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
