updated the script links inside of the index.html file

--- a/website/index.html
+++ b/website/index.html
@@ -37,7 +37,6 @@
       </div>
     </div>
 
-    <script src="config.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
