--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app">
     <div class="holder headline">
-      <h1>Weather Journal App</h1>
+      <h1>SoulWeather Journal App</h1>
     </div>
     <h2 id="error" class="hide">Bad data entered. Please try again.</h2>
     <div class="holder zip city">
@@ -36,10 +36,11 @@
     </div>
     <footer>
       <h2>
-        A project for Udacity's Front End Web Developer Nanodegree</h2>
+        &copy; 2020 Moses Kamara
+      </h2>
     </footer>
   </div>
-  <script src='config-sample.js' type='text/javascript'></script>
+  <script src='config.js' type='text/javascript'></script>
   <script src="app.js" type="text/javascript"></script>
 
 </body>
